// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render complete state 1`] = `
.emotion-13 {
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1px solid #F2F2F7;
}

.emotion-5 {
  cursor: pointer;
  padding: 0.25rem;
}

.emotion-5 .accept-dashed-border {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid transparent;
  border-style: dashed;
  padding-bottom: 0.5rem;
  padding-top: 0.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin-top: 0rem;
  margin-right: 0.25rem;
  margin-bottom: 0rem;
  margin-left: 0.25rem;
  display: inline-block;
}

.emotion-1:first-child {
  margin-left: 0;
}

.emotion-1:last-child {
  margin-right: 0;
}

.emotion-1:empty {
  display: none;
}

.emotion-0 {
  fill: #53595E;
  font-size: 1.5rem;
}

.emotion-2 {
  color: #53595E;
  font-size: 0.875rem;
  font-weight: bold;
}

.emotion-12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top: 1px solid #F2F2F7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1rem;
}

.emotion-11 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 1rem;
}

.emotion-6 {
  color: #53595E;
  font-weight: bold;
  background-color: #F2F2F7;
  border: 1px solid #F2F2F7;
  padding: 1rem;
}

.emotion-10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  font-weight: bold;
  margin-right: 10px;
}

.emotion-7 {
  fill: #0A67D1;
  font-size: 1rem;
  margin-right: 5px;
}

<div
  class="emotion-13"
>
  <div
    aria-disabled="false"
    class="emotion-5"
    style="position:relative"
  >
    <div
      class="accept-dashed-border"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-1"
        >
          <svg
            aria-hidden="true"
            class="emotion-0"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              data-name="upload"
            >
              <path
                d="M4 18h16v2H4zM11 7.94V16h2V7.94l3.95 4 1.41-1.42L12 4.11l-6.36 6.36 1.41 1.42zM12.06 7h-.12l.06-.06z"
              />
            </g>
          </svg>
        </div>
        <div
          class="emotion-1"
        >
          <span
            class="emotion-2"
          />
        </div>
      </div>
    </div>
    <input
      autocomplete="off"
      style="position:absolute;top:0;right:0;bottom:0;left:0;opacity:0.00001;pointer-events:none"
      type="file"
    />
  </div>
  <div
    class="emotion-12"
  >
    <span
      class="emotion-6"
    >
      pdf
    </span>
    <div
      class="emotion-11"
    >
      <div
        class="emotion-10"
      >
        <svg
          aria-hidden="true"
          class="emotion-7"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M19.99 7.76l-1.42-1.41-8.47 8.47-4.67-4.68-1.42 1.42 4.68 4.67 1.41 1.42h.01l1.41-1.41v-.01l8.47-8.47z"
            data-name="check"
          />
        </svg>
        <span
          class="emotion-8"
        >
          teste.pdf
        </span>
        <span
          class="emotion-9"
        >
          0 Bytes
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render initial state 1`] = `
.emotion-6 {
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1px solid #F2F2F7;
}

.emotion-5 {
  cursor: pointer;
  padding: 0.25rem;
}

.emotion-5 .accept-dashed-border {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid transparent;
  border-style: dashed;
  padding-bottom: 0.5rem;
  padding-top: 0.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin-top: 0rem;
  margin-right: 0.25rem;
  margin-bottom: 0rem;
  margin-left: 0.25rem;
  display: inline-block;
}

.emotion-1:first-child {
  margin-left: 0;
}

.emotion-1:last-child {
  margin-right: 0;
}

.emotion-1:empty {
  display: none;
}

.emotion-0 {
  fill: #53595E;
  font-size: 1.5rem;
}

.emotion-2 {
  color: #53595E;
  font-size: 0.875rem;
  font-weight: bold;
}

<div
  class="emotion-6"
>
  <div
    aria-disabled="false"
    class="emotion-5"
    style="position:relative"
  >
    <div
      class="accept-dashed-border"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-1"
        >
          <svg
            aria-hidden="true"
            class="emotion-0"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              data-name="upload"
            >
              <path
                d="M4 18h16v2H4zM11 7.94V16h2V7.94l3.95 4 1.41-1.42L12 4.11l-6.36 6.36 1.41 1.42zM12.06 7h-.12l.06-.06z"
              />
            </g>
          </svg>
        </div>
        <div
          class="emotion-1"
        >
          <span
            class="emotion-2"
          />
        </div>
      </div>
    </div>
    <input
      autocomplete="off"
      style="position:absolute;top:0;right:0;bottom:0;left:0;opacity:0.00001;pointer-events:none"
      type="file"
    />
  </div>
</div>
`;

exports[`should render uploading state 1`] = `
.emotion-13 {
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1px solid #F2F2F7;
}

.emotion-5 {
  cursor: pointer;
  padding: 0.25rem;
}

.emotion-5 .accept-dashed-border {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid transparent;
  border-style: dashed;
  padding-bottom: 0.5rem;
  padding-top: 0.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin-top: 0rem;
  margin-right: 0.25rem;
  margin-bottom: 0rem;
  margin-left: 0.25rem;
  display: inline-block;
}

.emotion-1:first-child {
  margin-left: 0;
}

.emotion-1:last-child {
  margin-right: 0;
}

.emotion-1:empty {
  display: none;
}

.emotion-0 {
  fill: #53595E;
  font-size: 1.5rem;
}

.emotion-2 {
  color: #53595E;
  font-size: 0.875rem;
  font-weight: bold;
}

.emotion-12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top: 1px solid #F2F2F7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1rem;
}

.emotion-11 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 1rem;
}

.emotion-6 {
  color: #53595E;
  font-weight: bold;
  background-color: #F2F2F7;
  border: 1px solid #F2F2F7;
  padding: 1rem;
}

.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  font-weight: bold;
  margin-right: 10px;
}

.emotion-10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  height: 4px;
  width: 100%;
}

.emotion-10::-webkit-progress-bar {
  background-color: #F2F2F7;
  border-radius: 4px;
}

.emotion-10::-webkit-progress-value {
  background-color: #0A67D1;
  border-radius: 4px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.emotion-10::-moz-progress-bar {
  background-color: #0A67D1;
  border-radius: 4px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

<div
  class="emotion-13"
>
  <div
    aria-disabled="false"
    class="emotion-5"
    style="position:relative"
  >
    <div
      class="accept-dashed-border"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-1"
        >
          <svg
            aria-hidden="true"
            class="emotion-0"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              data-name="upload"
            >
              <path
                d="M4 18h16v2H4zM11 7.94V16h2V7.94l3.95 4 1.41-1.42L12 4.11l-6.36 6.36 1.41 1.42zM12.06 7h-.12l.06-.06z"
              />
            </g>
          </svg>
        </div>
        <div
          class="emotion-1"
        >
          <span
            class="emotion-2"
          />
        </div>
      </div>
    </div>
    <input
      autocomplete="off"
      style="position:absolute;top:0;right:0;bottom:0;left:0;opacity:0.00001;pointer-events:none"
      type="file"
    />
  </div>
  <div
    class="emotion-12"
  >
    <span
      class="emotion-6"
    >
      pdf
    </span>
    <div
      class="emotion-11"
    >
      <div
        class="emotion-9"
      >
        <span
          class="emotion-7"
        >
          teste.pdf
        </span>
        <span
          class="emotion-8"
        >
          0 Bytes
        </span>
      </div>
      <progress
        class="emotion-10"
        max="100"
        value="40"
      />
    </div>
  </div>
</div>
`;
